test/test_error_1.out
Error type B at Line 1: Missing comma ','
Error type A at Line 2: unknown lexeme ?
