test/test_error_1.spl
int test_error_1(int a int b) {
    char c = ?;
}